Bug 485889 - Incorrect null checking/assignment? (with xpcshell test case).  r=gal