js/src/trace-test.js
@@ -4740,6 +4740,26 @@ testNewString.jitstats = {
 };
 test(testNewString);
 
+function testWhileObjectOrNull()
+{
+  try
+  {
+    for (var i = 0; i < 3; i++)
+    {
+      var o = { p: { p: null } };
+      while (o.p)
+        o = o.p;
+    }
+    return "pass";
+  }
+  catch (e)
+  {
+    return "threw exception: " + e;
+  }
+}
+testWhileObjectOrNull.expected = "pass";
+test(testWhileObjectOrNull);
+
 
 /*****************************************************************************
  *                                                                           *
